--- a/TslaNavTemplate/TslaNavTemplate.csproj
+++ b/TslaNavTemplate/TslaNavTemplate.csproj
@@ -47,6 +47,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +60,12 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="CustomPanel.cs" />
+    <Compile Include="GUI\HelloWorldControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\HelloWorldControl.Designer.cs">
+      <DependentUpon>HelloWorldControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\TemplateWindow.xaml.cs">
       <DependentUpon>TemplateWindow.xaml</DependentUpon>
     </Compile>
@@ -72,6 +79,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="GUI\HelloWorldControl.resx">
+      <DependentUpon>HelloWorldControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\tesla_icon_active.png" />
   </ItemGroup>
   <ItemGroup>
