--- a/TslaNavTemplate/TslaNavTemplate.csproj
+++ b/TslaNavTemplate/TslaNavTemplate.csproj
@@ -70,6 +70,11 @@
       <DependentUpon>TemplateWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TestCommand.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,10 +87,17 @@
     <EmbeddedResource Include="GUI\HelloWorldControl.resx">
       <DependentUpon>HelloWorldControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\tesla_icon_active.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\tesla_icon_active.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\tesla_logo_cut.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
